licenses(["notice"])  # Apache 2.0

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/google/safearchive
# gazelle:go_naming_convention import_alias
gazelle(name = "gazelle")

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "safeopen",
    srcs = [
        "safeopen.go",
        "safeopen_nix_common.go",
        "safeopen_linux.go",
        "safeopen_nix.go",
        "safeopen_win.go",
    ],
    importpath = "github.com/google/safeopen",
    visibility = ["//visibility:public"],
    deps = [
        "@go_sys//unix",
        "@go_sys//windows",
    ],
)

alias(
    name = "go_default_library",
    actual = ":safeopen",
    visibility = ["//visibility:public"],
)

go_test(
    name = "safeopen_test",
    size = "small",
    srcs = [
      "safeopen_test.go",
      "safeopen_linux_test.go",
      "safeopen_nix_test.go",
      "safeopen_win_test.go",
    ],
    embed = [":safeopen"],
)
